# DeciWaves

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  launch_gui.bat  pyproject.toml  requirements-asr.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: release.yml  test.yml
.memories/: README.md  asr-gpu-install-command-shape.md  ds-cutscene-audio.md  ds-wwise-wem-format.md  fw-streaming-graph.md  fw-subtitle-binding.md  game-package-subdirs.md  gui-export-output-dirs.md  gui-modal-dialog-headless-hang.md  gui-qsettings-test-isolation.md  gui-strict-branch-protection.md  hzd-pack-format.md  hzd-structural-binding.md  release-process.md  toolchain-notes.md  worktree-editable-install-contamination.md
docs/: BYO.md  GUI-AUDIT.md  architecture.md  asr-binding-plan.md  deciwaves-gui-spec.md  fw_burning_shores_names.md  fw_character_names.md  hi32_research_01.md  runtime-binding-plan.md
docs/examples/: asr-manifest.sample.csv  catalog.sample.csv  playlist.sample.csv
docs/superpowers/plans/: 2026-07-21-gui-onboarding-guide-rail.md  2026-07-23-csv-order-round-trip.md
docs/superpowers/specs/: 2026-07-21-gui-onboarding-guide-rail-design.md  2026-07-23-csv-order-round-trip-design.md
patches/: pydecima-dspc.patch
src/deciwaves/_vendor/: README.md
src/deciwaves/_vendor/pydecima/: __init__.py  _utils.py  reader.py
src/deciwaves/_vendor/pydecima/resources/: AmmoResource.py  CharacterDescriptionComponentResource.py  CollisionTrigger.py  CreditsColumn.py  CreditsRow.py  DamageAreaResource.py  DataSourceCreditsResource.py  EntityProjectileAmmoResource.py  EntityResource.py  (+38 more)
src/deciwaves/cli/: __init__.py  config.py  doctor.py  guided.py  main.py  run.py  setup.py
src/deciwaves/data/: README.md  __init__.py
src/deciwaves/data/ds/: cutscene_tracks.csv  data-file-list.txt
src/deciwaves/data/fw/: burning_shores_names.md  character_names.md
src/deciwaves/engine/: asr.py  atomic_io.py  audio_clip.py  catalog.py  catalog_io.py  coverage.py  parallel.py  profile.py  render.py  selection.py  sentence_core.py  speakers.py  speech_trim.py  story_order.py  text_lang.py  text_normalize.py  tool_paths.py  transcript_anchor.py
src/deciwaves/engine/pack/: __init__.py  base.py  bin_archive.py  bin_index.py  dsar_archive.py  fw_fast_extract.py  fw_locators.py  fw_object_reader.py  fw_package.py  fw_rtti.py  fw_stream.py  fw_streaming_graph.py  hzd_locators.py  hzd_package.py
src/deciwaves/games/ds/: catalog.py  cutscene_audio.py  cutscene_trim.py  dump.py  episode_map.py  profile.py  story_order.py
src/deciwaves/games/fw/: __init__.py  asr_run.py  assemble.py  bind.py  bulk.py  dlc.py  dump.py  extract.py  gamescript.py  manifest.py  match_lines.py  render.py  story_full.py  subtitle_bind.py  subtitle_match.py  weave.py
src/deciwaves/games/hzd/: asr.py  asr_bind.py  atrac9.py  binding.py  catalog.py  clip_index.py  dump.py  episode_map.py  inventory.py  match.py  profile.py  render.py  sentence_fw.py  wem_metadata.py
src/deciwaves/gui/: __init__.py  __main__.py  _env.py  app.py  capture.py  cli_command.py  coverage_model.py  cuda_probe.py  doctor_model.py  export.py  export_model.py  game_panel_model.py  global_bar.py  gpu_gate.py  gpu_probe.py  guide_model.py  issues_model.py  job_controller.py  jobs.py  library_model.py  pipeline_model.py  preview.py  preview_model.py  proc_env.py  progress_model.py  setup_model.py  shell.py  theme.py  widgets.py
src/deciwaves/gui/views/: __init__.py  game_panel.py  guide_rail.py  library.py  pipeline.py  pipeline_panels.py  setup.py
src/engine/: catalog.py  profile.py  render.py  selection.py  sentence_core.py  speakers.py  speech_trim.py  story_order.py  transcript_anchor.py
src/engine/pack/: __init__.py  bin_index.py  dsar_archive.py  fw_fast_extract.py  fw_object_reader.py  fw_package.py  fw_rtti.py  fw_stream.py
src/games/ds/: cutscene_audio.py  cutscene_trim.py  profile.py
src/games/fw/: asr_run.py  assemble.py  bind.py  bulk.py  dlc.py  extract.py  gamescript.py  match_lines.py  render.py  story_full.py  subtitle_bind.py  subtitle_match.py  weave.py
src/games/hzd/: asr_bind.py  catalog.py  clip_index.py  profile.py  render.py  sentence_fw.py  wem_metadata.py
tests/: conftest.py  test_asr.py  test_atomic_io.py  test_atrac9.py  test_audio_clip.py  test_bin_archive_find_chunk.py  test_binding.py  test_build_catalog.py  test_catalog_io.py  test_cli_config.py  test_cli_doctor.py  test_cli_guided.py  test_cli_main.py  test_cli_run.py  test_cli_setup.py  test_clip_index.py  test_cutscene_audio.py  test_cutscene_trim.py  test_data_pkg.py  test_dsar_archive.py  test_dsar_archive_lru.py  test_dspc_layout.py  test_dump.py  test_engine_coverage.py  test_episode_map.py  test_fixtures_bin_archive.py  test_fixtures_fw_streaming_graph.py  test_fixtures_sentence_core.py  test_fixtures_sentence_fw.py  test_fw_asr_run.py  test_fw_assemble.py  test_fw_audio_binding.py  test_fw_bind.py  test_fw_bulk.py  test_fw_dlc.py  test_fw_extract.py  test_fw_fast_extract.py  test_fw_gamescript.py  test_fw_locators.py  test_fw_manifest.py  (+43 more)
tests/gui/: conftest.py  test_capture.py  test_cli_command.py  test_coverage_model.py  test_cuda_probe.py  test_doctor_model.py  test_entry_dispatch.py  test_export.py  test_export_model.py  test_export_panel.py  test_game_panel.py  test_game_panel_model.py  test_game_panel_shell.py  test_global_bar.py  test_gpu_gate.py  test_gpu_probe.py  test_guide_rail.py  test_issues_model.py  test_job_controller.py  test_jobs.py  test_library_model.py  test_library_view.py  test_modal_guard.py  test_pipeline_model.py  test_pipeline_shell.py  test_pipeline_view.py  test_preview.py  test_preview_model.py  test_progress_model.py  test_qsettings_isolation.py  test_setup_doctor_integration.py  test_setup_model.py  test_setup_onboarding.py  test_setup_view.py  test_shell.py  test_shell_guide.py  test_widgets.py
tools/: README.md  clean-hzd-dumps.ps1  hzd_autodump.ps1  hzd_dstorage_hook.js  hzd_extract_ids.py  hzd_memscan.py  hzd_phys_to_key.py  memory-index.ps1  probe_hzd_census.py  regenerate-fixtures.py
(+4 files in other folders)
