[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "deciwaves"
version = "0.1.0"
description = "Extract speaker- and subtitle-tagged voice audio from Decima-engine games into story-ordered MP3 reels"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "prekabreki", email = "prekabreki@users.noreply.github.com" }]
dependencies = ["lz4>=4.0", "numpy>=1.24", "rapidfuzz>=3.0"]

[project.optional-dependencies]
test = ["pytest", "pytest-qt>=4.4"]
asr = ["whisperx>=3.1,<4"]
gui = ["PySide6>=6.7"]

[project.scripts]
deciwaves = "deciwaves.cli.main:main"

[project.gui-scripts]
# gui_scripts entry: launches without a console window (Windows shortcuts)
deciwaves-gui = "deciwaves.gui:launch"

[project.urls]
Homepage = "https://github.com/prekabreki/DeciWaves"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"deciwaves.data" = ["**/*.csv", "**/*.txt", "**/*.md"]
"deciwaves._vendor.pydecima" = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["src/deciwaves/_vendor"]

[tool.ruff.lint]
# Narrowly-scoped ignores for rules that fight this codebase's existing style
# (verified during Task 13 CI setup: each ignore below covers a pattern used
# repeatedly and deliberately, not a one-off; fixing them would mean mass
# rewriting working code rather than a mechanical lint fix).
ignore = [
    "E702",  # multiple statements on one line (;) -- used deliberately for
             # dense algorithmic code (e.g. MurmurHash in pack/bin_archive.py)
             # and terse test fakes; spans 14 files, not a one-off.
    "E731",  # lambda assigned to a name -- idiomatic here for small
             # predicates/test fakes (engine/speakers.py filter, test doubles
             # in test_cutscene_trim.py / test_speakers.py).
    "E741",  # ambiguous variable name (e.g. `l`) -- short loop vars in list
             # comprehensions across src/games/hzd and multiple test files;
             # renaming is a real edit, not a mechanical lint fix.
]
